# asciifier

./: .gitignore  LICENSE  README.md  pyproject.toml
src/asciifier/: __main__.py  cli.py  color.py  glyphs.py  loader.py  presets.py  resample.py  terminal.py  types.py
src/asciifier/encoders/: base.py  html.py  png.py  svg.py  terminal.py
src/asciifier/fonts/: README.md
src/asciifier/renderers/: base.py  block.py  braille.py  edge.py  fidelity.py  luminance.py
tests/: test_color.py  test_encoders_html.py  test_encoders_png.py  test_encoders_svg.py  test_encoders_terminal.py  test_glyphs.py  test_integration.py  test_loader.py  test_presets.py  test_renderers_base.py  test_renderers_block.py  test_renderers_braille.py  test_renderers_edge.py  test_renderers_fidelity.py  test_renderers_luminance.py  test_resample.py  test_terminal.py  test_types.py
